# kiwiq

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile-dev.app  LICENSE  README.md  docker-compose-dev.yml  docker-compose.prod.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  setup.sh
standalone_test_client/: CLAUDE.md  pyproject.toml
standalone_test_client/.cursor/rules/: project-rules.mdc
standalone_test_client/admin_utils/: admin_manual_workflow_submit_on_behalf_of_user.md
standalone_test_client/kiwi_client/: admin_client.py  app_artifact_client.py  auth_client.py  customer_data_client.py  run_client.py  run_debugger.py  template_client.py  test_config.py  test_run_client_v2.py  test_run_workflow_client.py  test_workflow_client_v2.py  user_state_client.py  websocket_client.py  workflow_client.py  workflow_ingestion_client.py
standalone_test_client/kiwi_client/analysis/: BILLING_ANALYZER_README.md  run_billing_analyzer_client.py  test_billing_analyzer.py
standalone_test_client/kiwi_client/schemas/: app_artifact_schemas.py  app_state_schemas.py  auth_schemas.py  billing_schemas.py  events_schema.py  workflow_api_schemas.py  workflow_constants.py
standalone_test_client/kiwi_client/workflow_exec_ui/: index.py  workflow_executor_streamlit_prd.md  workflow_utils.py
standalone_test_client/kiwi_client/workflow_exec_ui/pages/: 2_sandbox_editor.py  3_workflows_init_selection.py  4_llm_inputs_editor.py  5_testing_inputs_editor.py  5z_setup_docs_editor.py  6_run_workflow.py  7_document_manager.py
standalone_test_client/kiwi_client/workflow_exec_ui/utils/: streamlit_runner.py  workflow_utils.py
standalone_test_client/kiwi_client/workflows/: test_content_calendar_entry_workflow.py  test_linkedin_content_analysis_workflow.py  test_linkedin_scraping_workflow.py  test_run_content_workflow.py  test_sources_extraction_workflow.py  wf_alternate_text_suggestion_workflow.py  wf_automatic_concept_selection_workflow.py  wf_blog_brief_to_blog copy.py  wf_content_calendar_entry.py  wf_content_creation_workflow.py  wf_content_generation.py  wf_content_strategy.py  wf_content_strategy_workflow.py  wf_core_beliefs_perspectives_extraction_workflow.py  wf_idea_brainstorm_workflow.py  wf_idea_generation_workflow.py  wf_initial_brief_to_concepts_to_final_brief.py  wf_initial_brief_to_concepts_workflow.py  wf_knowledge_base_analysis_workflow.py  wf_linkedin_content_analysis.py  wf_linkedin_profile_analysis_onboarding_workflow.py  wf_linkedin_scraping.py  wf_natural_language_editing.py  wf_post_editing_workflow.py  wf_sources_extraction.py  wf_sources_extraction_workflow.py  wf_style_test_workflow.py  wf_user_dna_workflow.py
standalone_test_client/kiwi_client/workflows/active/: ONBOARDING_WORKFLOW_TESTING.md  sandbox_identifiers.py
standalone_test_client/kiwi_client/workflows/active/content_diagnostics/: wf_ai_visibility_full_workflow.py  (+9 more)
standalone_test_client/kiwi_client/workflows/deep_researcher_workflow_egs/: wf_eg_perplexity_deep_research.py
standalone_test_client/kiwi_client/workflows/deprecated/: wf_competitor_ai_visibility.py  wf_content_strategy_workflow.py  wf_idea_brainstorm_workflow.py  wf_knowledge_base_analysis_workflow.py  wf_linkedin_selected_topic_to_brief.py  wf_natural_language_editing.py
standalone_test_client/kiwi_client/workflows/document_models/: customer_docs.py
standalone_test_client/kiwi_client/workflows/examples/: wf_ai_answer_engine_scraper_eg.py  wf_ai_answer_engine_scraper_eg_simplified.py  wf_crawler_scraper_eg.py  wf_delete_customer_data_eg.py  wf_workflow_runner_eg.py
standalone_test_client/kiwi_client/workflows/llm_inputs/: alternate_text_suggestion.py  content_generation.py  knowledge_base_analysis.py  linkedin_content_analysis.py  natural_language_editing.py  natural_language_editing_all_schemas.py  post_brainstorm_from_scratch.py  sources_extraction.py
standalone_test_client/product_workflow_documentation/: CLAUDE.md  content_diagnostics_index.md  content_studio_index.md  playbook_index.md
standalone_test_client/product_workflow_documentation/content_diagnostics/: prod_blog_content_analysis.md  prod_company_ai_visibility_workflow.md  prod_competitor_content_analysis.md  prod_deep_research_workflow.md  prod_executive_ai_visibility.md  prod_linkedin_content_analysis.md  prod_linkedin_scraping.md  prod_orchestrator_workflow.md
standalone_test_client/product_workflow_documentation/content_diagnostics/evaluation_guidelines/: blog_content_analysis_evaluation_guidelines.md  company_ai_visibility_evaluation_guidelines.md  competitor_content_analysis_evaluation_guidelines.md  deep_research_evaluation_guidelines.md  executive_ai_visibility_evaluation_guidelines.md  linkedin_content_analysis_evaluation_guidelines.md  linkedin_profile_scraper_evaluation_guidelines.md  orchestrator_workflow_evaluation_guidelines.md
standalone_test_client/product_workflow_documentation/content_studio/: PRD_blog_brief_to_blog_backend.md  PRD_blog_user_input_to_brief_backend.md  index.md  prod_blog_brief_to_blog.md  prod_blog_calendar_selected_topic_to_brief.md  prod_blog_content_calendar_entry.md  prod_blog_content_optimisation_workflow.md  prod_blog_user_input_to_brief.md  prod_linkedin_alternate_text_suggestion_workflow.md  prod_linkedin_calendar_selected_topic_to_brief.md  prod_linkedin_content_calendar_entry.md  prod_linkedin_content_creation_workflow.md  prod_linkedin_user_input_to_brief.md
standalone_test_client/product_workflow_documentation/playbook/: prod_blog_content_playbook_generation.md  prod_linkedin_content_playbook_generation.md
standalone_test_client/scripts/: test_workflow_direct_submit.py  test_workflow_script.py
standalone_test_client/scripts/customer_data_scripts/: deletion_script.py
standalone_test_client/scripts/initial_setup/: company_data_uploader.py  create_account_for_all_users.py  customer_data_uploader.py  document_config.py  file_config_schema.py  ingest_all_workflows.py  update_user_state.py  update_user_state_for_all_users.py  upload_customer_data.py  upload_your_blog_system_docs.py  upload_your_linkedin_playbook_system_docs.py
(+479 files in other folders)
