[tool.poetry]
name = "kiwiq-ai"
version = "0.1.0"
description = "KiwiQ AI Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
# packages = [{include = "global_config", from = "libs"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.27.0"
pydantic = { version = "^2.5.0", extras = ["email"] }
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
websockets = "^12.0"
python-json-logger = "^3.2.1"
sqlmodel = "^0.0.24"
alembic = "^1.14.1"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"
pytest = "^8.3.4"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
redis = { extras = ["hiredis"], version = "^5.0.1" }
msgpack = "^1.0.7"
orjson = "^3.9.15"
prefect = "^2.14.0"
dotenv = "^0.9.9"
##################################################
# Include local libraries as editable dependencies
libs = { path = "./libs", develop = true }
##################################################
linkedin-api-client = "^0.3.0"
langchain = "^0.3.21"
langgraph = "^0.3.18"
langgraph-checkpoint-postgres = "^2.0.19"
psycopg-pool = "^3.2.6"
psycopg = "^3.2.6"
sqlalchemy = "^2.0.39"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
respx = "^0.20.2"
pytest-env = "^1.1.5"
ipdb = "^0.13.13"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
