[tool.poetry]
name = "kiwiq-ai"
version = "0.1.0"
description = "KiwiQ AI Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
# packages = [{include = "global_config", from = "libs"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.27.0"
pydantic = "^2.11.1"
pydantic-settings = "^2.1.0"
structlog = "^25.2.0"
websockets = "^15.0.1"
python-json-logger = "^3.3.0"
sqlmodel = "^0.0.24"
alembic = "^1.15.2"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
pytest = "^8.3.4"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
redis = "^5.2.1"
msgpack = "^1.1.0"
orjson = "^3.10.16"
dotenv = "^0.9.9"
##################################################
# Include local libraries as editable dependencies
libs = { path = "./libs", develop = true }
##################################################
linkedin-api-client = "^0.3.0"
langchain = "^0.3.22"
langgraph = "^0.3.21"
langgraph-checkpoint-postgres = "^2.0.19"
psycopg-pool = "^3.2.6"
psycopg = "^3.2.6"
sqlalchemy = "^2.0.40"
tokencost = "^0.1.20"
langchain-aws = "^0.2.18"
langchain-fireworks = "^0.2.9"
langchain-openai = "^0.3.11"
langchain-anthropic = "^0.3.10"
langchain-google-genai = "^2.1.2"
google-genai = "^1.9.0"
langchain-community = "^0.3.20"
weaviate-client = "^4.11.3"
pymongo = "^4.11.3"
aio-pika = "^9.5.5"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
fastapi-sso = "^0.18.0"
bcrypt = "^4.3.0"
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"
respx = "^0.22.0"
pytest-env = "^1.1.5"
ipdb = "^0.13.13"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
