[tool.poetry]
name = "kiwiq-ai"
version = "0.1.0"
description = "KiwiQ AI Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
# packages = [{include = "global_config", from = "libs"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.12"
uvicorn = "^0.27.0"
pydantic = "^2.11.1"
pydantic-settings = "^2.1.0"
structlog = "^25.2.0"
websockets = "^15.0.1"
python-json-logger = "^3.3.0"
sqlmodel = "^0.0.24"
alembic = "^1.15.2"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
pytest = "^8.3.4"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
redis = "^5.2.1"
msgpack = "^1.1.0"
orjson = "^3.10.16"
dotenv = "^0.9.9"
##################################################
# Include local libraries as editable dependencies
libs = { path = "./libs", develop = true }
##################################################
linkedin-api-client = "^0.3.0"
langchain = "^0.3.27"
langgraph = "^0.6.6"
langgraph-checkpoint-postgres = "^2.0.23"
psycopg-pool = "^3.2.6"
psycopg = "^3.2.6"
sqlalchemy = "^2.0.40"
tokencost = "^0.1.26"
langchain-aws = "^0.2.21"
langchain-fireworks = "^0.2.9"
langchain-openai = "^0.3.32"
langchain-anthropic = "^0.3.19"
langchain-google-genai = "^2.1.4"
google-genai = "^1.11.0"
langchain-community = "^0.3.24"
weaviate-client = "^4.15.3"
pymongo = "^4.11.3"
aio-pika = "^9.5.5"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
fastapi-sso = "^0.18.0"
bcrypt = "^4.3.0"
argon2-cffi = "^23.1.0"
faststream = {extras = ["rabbit"], version = "^0.5.37"}
datamodel-code-generator = "^0.28.5"
prefect = "^3.4.11"
jsonschema = {extras = ["format-nongpl"], version = "^4.23.0"}
jsonpatch = "^1.33"
markitdown = {extras = ["docx", "pdf", "pptx", "xls", "xlsx"], version = "^0.1.1"}
beautifulsoup4 = "^4.13.4"
tenacity = "^9.1.2"
stripe = "^12.2.0"
langchain-perplexity = "^0.1.2"
jinja2 = "^3.1.6"
langchain-google-vertexai = "^2.0.24"
aiosmtplib = "^4.0.1"
anthropic = "^0.64.0"
langchain-text-splitters = "^0.3.8"
spacy = "^3.8.7"
openai = "^1.102.0"
gunicorn = "^23.0.0"
fireworks = "^2.0.4"
scrapy = "^2.13.3"
playwright = "^1.53.0"
protego = "^0.5.0"
ultimate-sitemap-parser = "^1.4.0"
feedparser = "^6.0.11"
psutil = "^7.0.0"
flask = "^3.1.1"
tabulate = "^0.9.0"
trafilatura = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"
respx = "^0.22.0"
pytest-env = "^1.1.5"
ipdb = "^0.13.13"
pytest = "^8.3.5"
kiwi_client = { path = "./standalone_test_client", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
