[project]
name = "kiwi-client"
version = "0.1.0"
description = "Test and Integrate with KiwiQ Workflow API"
authors = [
    {name = "Founder A",email = "admin@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
package-mode = false
packages = [{include = "kiwi_client"}]

dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "langchain-core (>=0.3.51,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "email-validator (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

